resolved 3 div header sections to inline alignment vertically

--- a/app/styles/Profile.css
+++ b/app/styles/Profile.css
@@ -122,12 +122,6 @@ body {
 input[type=text]{
   border-radius: 20px;
 }
-.t-left {
-  float: left;
-}
-.t-right {
-  float: right;
-}
 .nav-search {
   overflow: hidden;
 }
